packages/build/tests/error/fixtures/plugin_error_to_json/plugin.js
'use strict'

module.exports = {
  onPreBuild({
    utils: {
      build: { failBuild },
    },
  }) {
    const error = new Error('test')
    error.toJSON = () => ({})
    failBuild('message', { error })
  },
}
